# agentic-data-analysis

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py  dependencies.py  main.py
app/agents/: base.py  code_interpreter.py  orchestrator.py  presentation.py  visualization.py
app/api/routes/: chat.py  files.py  sessions.py
app/models/: file.py  handoff.py  schemas.py  session.py
app/services/: executor_client.py  file_manager.py  gemini_client.py  pdf_generator.py  pptx_generator.py  redis_client.py  report_manager.py
app/static/: index.html
executor/: Dockerfile  server.py
sample_reports/: Executive Data Summary Report.pptx
tests/sample_data/: README.md  employee_hr.csv  marketing_campaigns.csv  patient_health_records.csv  sales_transactions.csv  stock_prices.csv
